# saml

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/helper/: install.sh  install_dependencies.sh  site_config.json
.github/workflows/: backport.yml  code-duplication.yml  generate-changelog.yml  lint.yaml  overrides.yaml  pytest.yaml  release.yaml
saml/: __init__.py  auth.py  hooks.py
saml/config/: desktop.py  docs.py
saml/docs/: index.md
saml/overrides/: logout.py  user.py
saml/public/css/: login.css
saml/public/js/: desk_logout.bundle.js  login.js
saml/saml/: __init__.py  auth.py  logout.py  settings.json
saml/saml/custom/: user.json
saml/saml/doctype/saml_group_mapping/: saml_group_mapping.json  saml_group_mapping.py
saml/saml/doctype/saml_login_key/: saml_login_key.js  saml_login_key.json  saml_login_key.py  test_saml_login_key.py
saml/tests/: conftest.py  docker-compose.yml  keycloak.sh  keycloak_helpers.py  process_realm.py  realm-export.json  realm-template.json  role_profile.json  saml_login_key.json  settings.json  setup.py  test_saml.py
saml/tests/data/: role_profile.json  saml_login_key.json
saml/www/: login.html  login.py  logout.html  logout.py
