[project]
name = "saml"
description = "SAML integration for Frappe"
authors = [{ name = "AgriTheory", email = "support@agritheory.dev" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/agritheory/saml"
repository = "https://github.com/agritheory/saml"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "15.3.1"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python3-saml = "^1.16.0"
xmlsec = "^1.3.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
addopts = "--cov=saml --cov-report term-missing"

[tool.black]
line-length = 99

[tool.codespell]
skip = '*.md, yarn.lock, *.js.map'

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"

[tool.coverage.report]
skip_covered = true
skip_empty = true
omit = [
    "*/boot.py",
    "*/customize.py",
    "*/hooks.py",
    "*/install.py",
    "*/patches/*",
    "*/test_*.py",
    "*/tests/*",
]
# https://coverage.readthedocs.io/en/latest/excluding.html#advanced-exclusion
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variable = ["saml/__init__.py:__version__"]

[tool.semantic_release.branches.version]
match = "version-15"
